# napvst

./: CMakeLists.txt  add_debug_entitlement.sh  app.json
data/: objects.json
src/: napplugin.cpp  napplugin.h  nappluginview.cpp  nappluginview.h  sdlpoller.cpp  sdlpoller.h
